minor placeholder text change

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                             <use class="logo-use" xlink:href="#codepen-logo"/>
                         </svg>
                     </a>
-                    <input name='input' class='some_class_name' placeholder='write some tags' value='css, html, javascript, css' data-blacklist='.NET,PHP'>
+                    <input name='input' class='some_class_name' placeholder='Type an English letter' value='css, html, javascript, css' data-blacklist='.NET,PHP'>
                     <br/>
                     <button class='tags--removeAllBtn' type='button'>Remove all these tags ⬆</button>
                 </aside>
@@ -520,7 +520,7 @@
                             <use class="logo-use" xlink:href="#codepen-logo"/>
                         </svg>
                     </a>
-                    <input name='input-custom-dropdown' class='tagify--custom-dropdown' placeholder='write some tags' value='css, html, javascript'>
+                    <input name='input-custom-dropdown' class='tagify--custom-dropdown' placeholder='Type an English letter' value='css, html, javascript'>
                 </aside>
             </section>
 
