--- a/test/users-list.html
+++ b/test/users-list.html
@@ -136,11 +136,12 @@
                 margin: var(--tagify-dd-item-pad);
                 font-style: italic;
                 border-radius: 4px;
-                background: salmon;
+                background: #00ce8d;
                 color: white;
+                font-weight: 600;
             }
 
-            .users-list .tagify__dropdown__itemsGroup:not(:first-of-type)::before{
+            .users-list .tagify__dropdown__itemsGroup:not(:first-of-type){
                 border-top: 1px solid #DDD;
             }
 
