--- a/test/users-list.html
+++ b/test/users-list.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Tagify - basic</title>
+        <title>Tagify - users list</title>
         <meta name="description" content="Converts HTML input/textarea into Tags component">
         <meta name="author" content="Yair Even-Or">
         <meta name="viewport" content="width=device-width">
