improved css selectors for the users-list example

--- a/index.html
+++ b/index.html
@@ -888,8 +888,8 @@
     vertical-align: top;
 }
 
-.tagify__dropdown.users-list div,
-.tagify__dropdown.users-list strong{
+.tagify__dropdown.users-list header.tagify__dropdown__item > div,
+.tagify__dropdown.users-list .tagify__dropdown__item strong{
     grid-area: name;
     width: 100%;
     align-self: center;
