--- a/test/mode-select.html
+++ b/test/mode-select.html
@@ -61,6 +61,7 @@ var input = document.querySelector('input[name=tags-select-mode]'),
         ],
         // whitelist: ['One', 'Two', 'Three'],
         dropdown: {
+            // enabled: 2,
             maxItems: 3,
             //mapValueTo: 'username',
             //searchKeys: ['username'],
