for auto-complete, should be mapped

--- a/test/users-list.html
+++ b/test/users-list.html
@@ -212,6 +212,7 @@ var tagify = new Tagify(inputElm, {
     // enforceWhitelist: true,
     skipInvalid: true, // do not remporarily add invalid tags
     dropdown: {
+        mapValueTo: 'name',
         closeOnSelect: false,
         enabled: 0,
         classname: 'users-list',
