Updated Taiwan in index.html country list

--- a/index.html
+++ b/index.html
@@ -2267,7 +2267,7 @@ var tagify = new Tagify(document.querySelector('input[name=tags3-1]'), {
       { value:'Sweden', code:'SE' },
       { value:'Switzerland', code:'CH' },
       { value:'Syrian Arab Republic', code:'SY' },
-      { value:'Taiwan, Province of China', code:'TW' },
+      { value:'Taiwan', code:'TW' },
       { value:'Tajikistan', code:'TJ' },
       { value:'Tanzania, United Republic of', code:'TZ' },
       { value:'Thailand', code:'TH' },
