--- a/index.html
+++ b/index.html
@@ -1685,6 +1685,7 @@ var input = document.querySelector('input[name=tags3]'),
     tagify = new Tagify(input, {
         pattern             : /^.{0,20}$/,  // Validate typed tag(s) by Regex. Here maximum chars length is defined as "20"
         delimiters          : ",| ",        // add new tags when a comma or a space character is entered
+        trim                : false,        // if "delimiters" setting is using space as a delimeter, then "trim" should be set to "false"
         keepInvalidTags     : true,         // do not remove invalid tags (but keep them marked as invalid)
         // createInvalidTags: false,
         editTags            : {
