should allow selecting dropdown values with multiple spaces in them

--- a/test/basic.html
+++ b/test/basic.html
@@ -69,7 +69,7 @@ const mockAjax = (timeout => (RES, duration) => {
 })()
 
 let tagify = new Tagify(inputElm, {
-    whitelist: ['abb', 'cbb', 'bb', 'bb1', 'aaabb', 'bbb', 'aa', 'bba'],
+    whitelist: ['ab     x', 'cbb', 'bb', 'bb1', 'aaabb', 'bbb', 'aa', 'bba'],
     // whitelist: ["a", "ac", "aab", "aaa", "b", "bb", "ccc"],
     id: 'test1',
     tagTextProp: 'name',
