changed an email to be much longer to showcase how the suggestions dropdown handles such situations (or rather how the developer wants to style them)

--- a/test/basic.html
+++ b/test/basic.html
@@ -152,7 +152,8 @@ new Tagify(inputElm, {
             },
             {
                 value: 'aaa',
-                email: '1111alon@gmail.com',
+                email: '1111111222222233333333444444445555555666666777777@gmail.com',
+                title: '1111111222222233333333444444445555555666666777777@gmail.com',
             },
             {
                 value: 'aaaaa1',
