--- a/index.html
+++ b/index.html
@@ -2571,7 +2571,7 @@ $('.tags-jquery--removeAllBtn').on('click', jqTagify.removeAllTags.bind(jqTagify
                     cssVar: ['tag--max-width', 'ch'],
                     label: 'tag--max-width',
                     type: 'range',
-                    value: 'auto', min: 1, max: 20,
+                    value: '100%', min: 1, max: 20,
                 },
                 {
                     cssVar: ['loader-size', 'em'],
