--- a/test/basic-RTL.html
+++ b/test/basic-RTL.html
@@ -97,9 +97,7 @@ let tagify = new Tagify(inputElm, {
     },
     templates: {
         dropdownItemNoMatch: function(data) {
-            return `<div class='${this.settings.classNames.dropdownItem}' value="noMatch" tabindex="0" role="option">
-                No suggestion found for: <strong>${data.value}</strong>
-            </div>`
+            return `<div class='${this.settings.classNames.dropdownItem}' value="noMatch" tabindex="0" role="option">לא נמצאו תוצאות עבור: <strong>${data.value}</strong></div>`
         }
     }
 })
