--- a/test/basic.html
+++ b/test/basic.html
@@ -93,9 +93,7 @@ let tagify = new Tagify(inputElm, {
     },
     templates: {
         dropdownItemNoMatch: function(data) {
-            return `<div class='${this.settings.classNames.dropdownItem}' value="noMatch" tabindex="0" role="option">
-                No suggestion found for: <strong>${data.value}</strong>
-            </div>`
+            return `<div class='${this.settings.classNames.dropdownItem}' value="noMatch" tabindex="0" role="option">No suggestion found for: <strong>${data.value}</strong></div>`
         }
     }
 })
