--- a/test/mode-select.html
+++ b/test/mode-select.html
@@ -37,7 +37,7 @@
     <body>
 
 
-        <input name='tags-select-mode' class='selectMode' placeholder="Please select" value="One" />
+        <input name='tags-select-mode' class='selectMode' placeholder="Please select" value="1" />
 
         <input name='tags-select-mode' class='selectMode' placeholder="Please select" value="1" />
 
@@ -53,8 +53,8 @@ var input = document.querySelector('input[name=tags-select-mode]'),
         whitelist: [
             { value:0, title: 'interger value 0' },
             { value:1, title: 'interger value 1' },
-            { "id":"1", "value": 1, "title":"First option" },
-            { "id":"2", "value": 2, "title":"Second option" },
+            { "id":"x", "value": 'X', "title":"option X" },
+            { "id":"y", "value": 'Y', "title":"option Y" },
             { 'value':'Item a', id:1 },
             { 'value':'Item b', id:2 },
             { 'value':'Item c', id:3 },
